force-app/main/default/objects/Email_Template__c/fields/Additional_Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>Additional_Distribution_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Distribution Group</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Templates (Additional Distribution Group)</relationshipLabel>
    <relationshipName>Email_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>