force-app/main/default/objects/Email_Template__c/fields/Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Group</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distribution Lists</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Templates</relationshipLabel>
    <relationshipName>Email_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>