force-app/main/default/objects/Email_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Subject__c</columns>
    <columns>Related_Object__c</columns>
    <columns>Additional_Distribution_Group__c</columns>
    <columns>Distribution_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>